--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -149,7 +149,7 @@ $deep-teal: rgb(0, 114, 151);
         z-index: 2;
 
         .background-imagery {
-            background: linear-gradient($lighter-gray 55%, rgba(color(gold), 0.6));
+            background: linear-gradient(rgb(229, 299, 229), color(gold));
 
             > img {
                 bottom: -1.7vw;
@@ -188,6 +188,8 @@ $deep-teal: rgb(0, 114, 151);
         }
 
         h1 {
+            font-size: 6rem;
+
             .subhead {
                 font-size: 2.4rem;
                 font-weight: bold;
