--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -149,7 +149,7 @@ $deep-teal: rgb(0, 114, 151);
         z-index: 2;
 
         .background-imagery {
-            background: linear-gradient(rgb(229, 299, 229), color(gold));
+            background: linear-gradient(#f5f5f5, #febd3e);
 
             > img {
                 bottom: -1.7vw;
