Fix Tutor marketing headline in High Tech section

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -41,8 +41,8 @@
             <div class="background-imagery">
                 <img src="images/openstax-tutor/work-landscape-waves.svg">
             </div>
+            <h1 class="boxed">{model.howItWorks.headline}</h1>
             <div class="text-content">
-                <h1>{model.howItWorks.headline}</h1>
                 <h2>{model.howItWorks.subhead}</h2>
                 <div class="description" data-html="howItWorks.description" skip="true"></div>
             </div>
