Remove Concept Coach links and form options

--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -19,7 +19,7 @@
                               </a>
                           </p>
                           <p>
-                          Errata for OpenStax Tutor and Concept Coach are updated at the end of each semester.
+                          Errata for OpenStax Tutor are updated at the end of each semester.
                           </p>
                           Have questions?  Please email <a href="mailto:errata@openstax.org">errata@openstax.org</a>
                       </div>
