Remove "free" from Student Resources description

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -119,7 +119,7 @@
                 <div id="student-resources-section" class="row">
                     <h3>Student Resources</h3>
                     <p>
-                        Take a look at our free student resources that are integrated
+                        Take a look at our student resources that are integrated
                         with your book to help you ace your course.
                     </p>
                     <div id="student-resources" class="resource" skip="true"></div>
