Update hero styling for Subjects page

--- a/src/app/pages/subjects/subjects.html
+++ b/src/app/pages/subjects/subjects.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="hero text-content" data-html="page_description" skip="true"></div>
+    <div class="hero" data-html="page_description" skip="true"></div>
 
     <div class="strips-and-filter">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
