--- a/src/styles/components/loader.scss
+++ b/src/styles/components/loader.scss
@@ -1,3 +1,5 @@
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
+
 // scss-lint:disable IdSelector
 .page-loading {
 
@@ -11,7 +13,7 @@
     }
 
     .os-loader {
-        background-color: #efefef;
+        background-color: ui-color(default);
         bottom: 0;
         height: 100vh;
         left: 0;
@@ -32,7 +34,7 @@
         }
 
         .os-overlay {
-            background-color: #fafafa;
+            background-color: ui-color(white);
             background-size: 200% 100%;
             height: 100vh;
             left: 0;
